Kubernetes/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-commandes-deployment
  labels:
    app: microservice-commandes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-commandes
  template:
    metadata:
      labels:
        app: microservice-commandes
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: special
                operator: In
                values:
                - "true"
      containers:
      - name: microservice-commandes
        image: pamoussa/mcommandes:latest
        ports:
        - containerPort: 9002
  dependsOn:
  - apiGroup: batch
    kind: Job
    name: waiter-job

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-paiement-deployment
  labels:
    app: microservice-paiement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-paiement
  template:
    metadata:
      labels:
        app: microservice-paiement
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: special
                operator: In
                values:
                - "true"
      containers:
      - name: microservice-paiement
        image: pamoussa/mpaiement:latest
        ports:
        - containerPort: 9003
  dependsOn:
  - apiGroup: batch
    kind: Job
    name: waiter-job

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-produits-deployment
  labels:
    app: microservice-produits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-produits
  template:
    metadata:
      labels:
        app: microservice-produits
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: special
                operator: In
                values:
                - "true"
      containers:
      - name: microservice-produits
        image: pamoussa/mproduits:latest
        ports:
        - containerPort: 9001
  dependsOn:
  - apiGroup: batch
    kind: Job
    name: waiter-job
