Kubernetes/auth-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
  labels:
    app: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: pamoussa/auth-server:latest
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-server
  ports:
  - protocol: TCP
    port: 3000
    nodePort: 30005
    targetPort: 3000
  type: NodePort
