Kubernetes/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: produits-service
spec:
  selector:
    app: microservice-produits
  ports:
    - protocol: TCP
    - nodePort: 30001
    port: 9001
    targetPort: 9001
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: commandes-service
spec:
  selector:
    app: microservice-commandes
  ports:
    - protocol: TCP
    - nodePort: 30002
    port: 9002
    targetPort: 9002
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: paiement-service
spec:
  selector:
    app: microservice-paiement
  ports:
    - protocol: TCP
    - nodePort: 30003
    port: 9003
    targetPort: 9003
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: apollo-server-service
spec:
  selector:
    app: apollo-server
  ports:
    - protocol: TCP
    - nodePort: 30004
    port: 4000
    targetPort: 4000
  type: NodePort
